@@ -23,6 +23,7 @@ Version 1.7.1
        in repobrowser. (Stefan)
 - BUG: Issue #99: Memory corruption in
        repository browser. (Stefan)
+- BUG: Issue #102: renamed diff scripts. (Stefan)
 
 Version 1.7.0
 Too many changes to list here. See the release notes for
